--- a/public/views/help.html
+++ b/public/views/help.html
@@ -11,59 +11,59 @@
         <tbody>
           <tr>
             <td translate><b>View Address</b></td>
-            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT">https://insight.verus.io/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT</a></td>
+            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT">https://varrrexplorer.piratechain.com/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT</a></td>
           </tr>
           <tr>
             <td translate><b>View Address Balance</b></td>
-            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/balance">https://insight.verus.io/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/balance</a></td>
+            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/balance">https://varrrexplorer.piratechain.com/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/balance</a></td>
           </tr>
           <tr>
             <td translate><b>View Address unconfirmed Balance</b></td>
-            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/unconfirmedBalance">https://insight.verus.io/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/unconfirmedBalance</a></td>
+            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/unconfirmedBalance">https://varrrexplorer.piratechain.com/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/unconfirmedBalance</a></td>
           </tr>
           <tr>
             <td translate><b>View Address Total Received</b></td>
-            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/totalReceived">https://insight.verus.io/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/TotalReceived</a></td>
+            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/totalReceived">https://varrrexplorer.piratechain.com/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/TotalReceived</a></td>
           </tr>
           <tr>
             <td translate><b>View Address Total Sent</b></td>
-            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/totalSent">https://insight.verus.io/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/totalSent</a></td>
+            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/totalSent">https://varrrexplorer.piratechain.com/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/totalSent</a></td>
           </tr>
           <tr>
             <td translate><b>View Address UTXOs</b></td>
-            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/utxo">https://insight.verus.io/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/utxo</a></td>
+            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/utxo">https://varrrexplorer.piratechain.com/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/utxo</a></td>
           </tr>
           <tr>
             <td translate><b>View Address transactions</b></td>
-            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/txs">https://insight.verus.io/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/txs</a></td>
+            <td class="text-right ellipsis"><a href="api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/txs">https://varrrexplorer.piratechain.com/api/address/RP9tNCn6LHEYS7Yrp3NVuSu7DJZjAW6GyT/txs</a></td>
           </tr>
           <tr>
             <td translate><b>View Transaction details</b></td>
-            <td class="text-right"><a href="api/tx/60678d67f25f21014c2f6b8fb3948ea3a2522f76339315c81b7a47f9ce7d5d63">https://insight.verus.io/api/tx/106f....8c30c59b033b</a></td>
+            <td class="text-right"><a href="api/tx/60678d67f25f21014c2f6b8fb3948ea3a2522f76339315c81b7a47f9ce7d5d63">https://varrrexplorer.piratechain.com/api/tx/106f....8c30c59b033b</a></td>
           </tr>
           <tr>
             <td translate><b>Get Block</b></td>
-            <td class="text-right"><a href="api/block/0a5cde67e52e9d855f5e22928a730801e2d70ad7606ad767e16d00f2d546115b">https://insight.verus.io/api/block/block-hash</a></td>
+            <td class="text-right"><a href="api/block/0a5cde67e52e9d855f5e22928a730801e2d70ad7606ad767e16d00f2d546115b">https://varrrexplorer.piratechain.com/api/block/block-hash</a></td>
           </tr>
           <tr>
             <td translate><b>getdifficulty:</b><br> Returns the current difficulty.</td>
-            <td class="text-right"><a href="api/getdifficulty">https://insight.verus.io/api/getdifficulty</a></td>
+            <td class="text-right"><a href="api/getdifficulty">https://varrrexplorer.piratechain.com/api/getdifficulty</a></td>
           </tr>
           <tr>
             <td translate><b>getblockcount:</b><br> Returns the current block index. </td>
-            <td class="text-right"><a href="api/getblockcount">https://insight.verus.io/api/getblockcount</a></td>
+            <td class="text-right"><a href="api/getblockcount">https://varrrexplorer.piratechain.com/api/getblockcount</a></td>
           </tr>
           <tr>
             <td translate><b>getblockhash [index]:</b><br> Returns the hash of the block at Number, index 0 is the genesis block.</td>
-            <td class="text-right"><a href="api/getblockhash?index=1337">https://insight.verus.io/api/getblockhash?index=1337</a></td>
+            <td class="text-right"><a href="api/getblockhash?index=1337">https://varrrexplorer.piratechain.com/api/getblockhash?index=1337</a></td>
           </tr>
           <tr>
             <td translate><b>getblock [hash]:</b><br> Returns information about the block with the given hash. </td>
-            <td class="text-right"><a href="/api/getblock?hash=0000000000e1373d9c645c5a77376fe36b69c77180962414ebbf2e63c115d85e">https://insight.verus.io/api/getblock?hash=00000000..180962414ebbf2e63c115d85e</a></td>
+            <td class="text-right"><a href="/api/getblock?hash=0000000000e1373d9c645c5a77376fe36b69c77180962414ebbf2e63c115d85e">https://varrrexplorer.piratechain.com/api/getblock?hash=00000000..180962414ebbf2e63c115d85e</a></td>
           </tr>
           <tr>
             <td translate><b>getnetworkhashps:</b><br> Returns the current network hashrate. (hash/s)</td>
-            <td class="text-right"><a href="/api/getnetworkhashps">https://insight.verus.io/api/getnetworkhashps</a></td>
+            <td class="text-right"><a href="/api/getnetworkhashps">https://varrrexplorer.piratechain.com/api/getnetworkhashps</a></td>
           </tr>
         </tbody>
       </table>
@@ -74,7 +74,7 @@
         <tbody>
           <tr>
             <td translate>Main Website Technology</td>
-            <td class="text-right ellipsis"><a href="https://verus.io/technology">https://verus.io/technology</a></td>
+            <td class="text-right ellipsis"><a href="https://piratechain.com/">https://piratechain.com/</a></td>
           </tr>
           <tr>
             <td translate>Verus Wiki</td>
