--- a/public/views/status.html
+++ b/public/views/status.html
@@ -52,7 +52,7 @@
     </div> <!-- END OF COL-8 -->
 
     <div class="col-xs-12 col-md-4 col-gray">
-      <h2 translate>Verus Blockchain information</h2>
+      <h2 translate>vARRR Blockchain information</h2>
       <table class="table" data-ng-controller="StatusController" data-ng-init="getStatus('Info');getStatus('MiningInfo');getStatus('coinSupply')">
         <thead  data-ng-include src="'views/includes/infoStatus.html'"></thead>
         <tbody>
@@ -70,15 +70,15 @@
           </tr>
           <tr>
             <td translate>Circulating Supply Transparent</td>
-            <td class="text-right">{{coinSupply.supply}} VRSC</td>
+            <td class="text-right">{{coinSupply.supply}} vARRR</td>
           </tr>
           <tr>
             <td translate>Circulating Supply in Z addresses</td>
-            <td class="text-right">{{coinSupply.zfunds}} VRSC</td>
+            <td class="text-right">{{coinSupply.zfunds}} vARRR</td>
           </tr>
           <tr>
             <td translate>Circulating Supply Total</td>
-            <td class="text-right">{{coinSupply.total}} VRSC</td>
+            <td class="text-right">{{coinSupply.total}} vARRR</td>
           </tr>
           <tr>
             <td translate>Network Hashrate</td>
