--- a/public/views/includes/header.html
+++ b/public/views/includes/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="insight navbar-brand" href="." title="Verus Explorer"><img id="brandImg" src="img/logo.png" alt="Verus"></a>
+      <a class="insight navbar-brand" href="." title="vARRR Explorer"><img id="brandImg" src="img/varrr-logo-sq-light-512.svg" alt="vARRR"></a>
     </div>
     <div class="navbar-collapse collapse" collapse="$root.isCollapsed">
       <ul class="nav navbar-nav">
