--- a/public/views/transaction/tx.html
+++ b/public/views/transaction/tx.html
@@ -235,7 +235,7 @@
             </div>
             <div class="ellipsis">
               <span data-ng-show="vin.notAddr">{{vin.addr}}</span>
-              <span class="text-muted" title="Current Verus Address" data-ng-show="vin.addr == $root.currentAddr">{{vin.addr}}</span>
+              <span class="text-muted" title="Current vARRR Address" data-ng-show="vin.addr == $root.currentAddr">{{vin.addr}}</span>
               <a href="address/{{vin.addr}}" data-ng-show="!vin.notAddr && vin.addr != $root.currentAddr">{{vin.addr}}</a>
             </div>
             <div data-ng-show="vin.unconfirmedInput" class="text-danger"> <span class="glyphicon glyphicon-warning-sign"></span> (Input unconfirmed)</div>
@@ -340,7 +340,7 @@
 
               <div class="ellipsis">
                 <span data-ng-show="vout.notAddr">{{vout.addr}}</span>
-                <span class="text-muted" title="Current Verus Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.addr}}</span>
+                <span class="text-muted" title="Current vARRR Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.addr}}</span>
                 <a href="address/{{address}}"  data-ng-show="!vout.notAddr && address != $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{address}}</a>
               </div>
             </div>
@@ -355,7 +355,7 @@
               </div>
               <div class="ellipsis">
                 <span data-ng-show="vout.notAddr">{{vout.addr}}</span>
-                <span class="text-muted" title="Current Verus Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.addr}}</span>
+                <span class="text-muted" title="Current vARRR Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.addr}}</span>
                 <a href="address/{{address}}"  data-ng-show="!vout.notAddr && address != $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.address_pbaas[1]}}</a>
                </div>
               </div>
@@ -373,7 +373,7 @@
                 </div>
                 <div class="ellipsis">
                  <span data-ng-show="vout.notAddr">{{vout.identityprimary.primaryaddresses[0]}}</span>
-                 <span class="text-muted" title="Current Verus Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.identityprimary.name}}</span>
+                 <span class="text-muted" title="Current vARRR Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.identityprimary.name}}</span>
                  <a href="address/{{address}}"  data-ng-show="!vout.notAddr && address != $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.identityprimary.name}}@</a>
                 </div>
                </div>
@@ -391,7 +391,7 @@
                </div>
                <div class="ellipsis">
                 <span data-ng-show="vout.notAddr">{{vout.currencydefinition.name}}</span>
-                <span class="text-muted" title="Current Verus Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.currencydefinition.name}}</span>
+                <span class="text-muted" title="Current vARRR Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.currencydefinition.name}}</span>
                 <a href="address/{{address}}"  data-ng-show="!vout.notAddr && address != $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.currencydefinition.name}}</a>
                </div>
               </div>
@@ -409,7 +409,7 @@
                </div>
                <div class="ellipsis">
                 <span data-ng-show="vout.notAddr">{{vout.othercommitment}}</span>
-                <span class="text-muted" title="Current Verus Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.currencydefinition.name}}</span>
+                <span class="text-muted" title="Current vARRR Address" data-ng-show="address == $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.currencydefinition.name}}</span>
                 <a href="address/{{address}}"  data-ng-show="!vout.notAddr && address != $root.currentAddr" data-ng-repeat="address in vout.addr.split(',')">{{vout.currencydefinition.name}}</a>
                </div>
               </div>
